# GUIbuilder

./: .clang-format  CMakeLists.txt  guiClass.cpp  guiClass.hpp  main.cpp  vcpkg.json
